# algorithm-analysis-service

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project-local.properties  sonar-project.properties
gui/: Dockerfile  home.py  pyproject.toml  requirements.txt
gui/.streamlit/: config.toml
gui/config/: __init__.py
gui/pages/: 1_algorithms.py
migrations/: env.py  load_execution_data.sql  load_payload_data.sql  load_result_data.sql
migrations/versions/: 60a7dfa217e7_insert_dijkistra_and_factorial.py  60a7dfa217e7_insert_dijkstra_factorial_fibonacci.py  886facf07954_create_account_table.py  886facf07954_create_tables.py  c33d5d08e981_create_account_table.py  c854d6ad7ea1_adding_processed_inputs.py  e82ac4f587a0_adding_criterias.py  e82ac4f587a0_adding_running_time_criteria.py
src/: config.py  exceptions.py  routes.py  server.py
src/algorithms/: __init__.py
src/algorithms/dijkstra/: README.md  code.py  instance.py
src/algorithms/factorial/: code.py  instance.py
src/api/: __init__.py  healthcheck.py
src/api/v1/: algorithm.py  execution.py  report.py  result.py
src/codes/: __init__.py  base.py
src/codes/dijkstra/: __init__.py
src/codes/factorial/: __init__.py
src/codes/fibonacci/: __init__.py
src/common/: functions.py
src/controllers/: __init__.py  algorithm.py  criteria.py  execution.py  input.py  payload.py  report.py  result.py
src/evaluation/: __init__.py  base.py
src/evaluation/count_edges/: __init__.py
src/evaluation/count_nodes/: __init__.py
src/external_services/: aws_interface.py
src/internal_services/: app_request.py  app_ulid.py
src/logs/: handler_service.py  service_logger.py
src/models/: __init__.py  base.py  orm.py  src_orm.py  tb_algorithm.py  tb_algorithm_criteria.py  tb_criteria.py  tb_execution.py  tb_input.py  tb_language  tb_payload.py  tb_question.py  tb_questionnaire.py  tb_report.py  tb_result.py  tb_source.py
src/tasks/: __init__.py  execution.py  process_report.py
tests/: __init__.py
tests/src/: test_config.py  test_exceptions.py  test_routes.py  test_server.py
(+38 files in other folders)
